# AquaBle-HACS

./: .gitignore  DEVELOPMENT.md  INTEGRATION_PLAN.md  README.md  TODO.md  aquable.code-workspace  docker-compose.yml  hacs.json  info.md  pyproject.toml
.github/: copilot-instructions.md
custom_components/aquable/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/aquable/device_control/: __init__.py  constants.py  status_parser.py
custom_components/aquable/device_control/device/: __init__.py  base_device.py  doser.py  light.py
custom_components/aquable/storage/: __init__.py
custom_components/aquable/utils/: __init__.py
